Add:Redesign App

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="src/assets/beatify-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beatify</title>
+    <meta name="description" content="Beatify - Discover and enjoy music from top artists. Search, explore, and create your perfect music experience with AI-powered recommendations." />
+    <meta name="keywords" content="Beatify, music, streaming, artists, songs, playlist, AI music" />
+    <meta name="author" content="Beatify" />
+    <title>Beatify - Your Music Hub</title>
   </head>
   <body>
     <div id="root"></div>
